--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TourWebsiteContext": "Server=(localdb)\\mssqllocaldb;Database=TourWebsiteContext-8e890864-2552-40aa-885f-f6886f9a3236;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
