--- a/TourWebsite.csproj
+++ b/TourWebsite.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="tinymce" Version="7.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
