--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,6 @@
   "SMTPSender":  "loftus6@marshall.edu",
 
   "ConnectionStrings": {
-    "TourWebsiteContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TourWebsite;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TourWebsiteContextConnection": "Data Source=192.168.68.52,1433;User ID=sa;Password=M0thman69!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
