tours are now sites

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,6 @@
   "SMTPSender":  "loftus6@marshall.edu",
 
   "ConnectionStrings": {
-    "TourWebsiteContextConnection": "Data Source=127.0.0.1,1433;User ID=sa;Password=T0urW3bsite!;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "TourWebsiteContextConnection": "Data Source=127.0.0.1,1433;User ID=sa;Password=T0urW3bsite!;MultipleActiveResultSets=true;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
